added netlify plugin

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@netlify/next": "^1.4.9",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "sass": "^1.86.0"
