--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "i18next": "^25.3.1",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-i18next": "^15.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
